[gd_scene load_steps=6 format=3 uid="uid://cttiymsodcvro"]

[ext_resource type="Script" path="res://Scripts/Game/UI/TeamMemberSlot.gd" id="1_krfvw"]
[ext_resource type="PackedScene" uid="uid://jg1gac10pqvt" path="res://Prefabs/Frame.tscn" id="2_7l1go"]
[ext_resource type="Texture2D" uid="uid://c2a62auhmc77c" path="res://Art/Characters/Barbarian.png" id="3_ixm3k"]
[ext_resource type="Texture2D" uid="uid://e2c4066hnaa5" path="res://Art/Coin.png" id="4_ikjh0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhgqh"]
bg_color = Color(0.788235, 0.219608, 0.392157, 1)

[node name="TeamMemberSlot" type="Button"]
custom_minimum_size = Vector2(160, 160)
script = ExtResource("1_krfvw")

[node name="Frame" parent="." instance=ExtResource("2_7l1go")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -70.5
offset_right = 56.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2

[node name="Face" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -66.0
offset_right = 56.5
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ixm3k")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -43.0
offset_right = 75.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
text = "asdasdasda"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="SellPopup" type="Panel" parent="."]
visible = false
z_index = 3
z_as_relative = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -108.0
offset_right = 100.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qhgqh")

[node name="HBoxContainer" type="HBoxContainer" parent="SellPopup"]
layout_mode = 0
offset_top = -6.0
offset_right = 189.0
offset_bottom = 44.0
alignment = 1

[node name="Label" type="Label" parent="SellPopup/HBoxContainer"]
layout_mode = 2
text = "Sell for "

[node name="Control" type="Control" parent="SellPopup/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="SellPopup/HBoxContainer/Control"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -15.0
offset_right = 30.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_ikjh0")
expand_mode = 2
stretch_mode = 5

[node name="Amount" type="Label" parent="SellPopup/HBoxContainer"]
layout_mode = 2
text = "6"

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
